--- a/assets/scss/core/_fonts.scss
+++ b/assets/scss/core/_fonts.scss
@@ -1,6 +1,6 @@
 //FONTS VAR
-$headingFont: "Proxima Nova", sans-serif; //PESOS: 400it, 700, 900it 
-$contentFont: "Novecento", sans-serif; //PESOS: 300it, 300, 700, 700it
+$headingFont: "Novecento", sans-serif; //PESOS: 400it, 700, 900it 
+$contentFont: "Proxima Nova", sans-serif; //PESOS: 300it, 300, 700, 700it
 $alternativeFont: "Alwars in my heart", cursive;
 
 $thin: 			100;
