--- a/assets/scss/core/_colors.scss
+++ b/assets/scss/core/_colors.scss
@@ -2,6 +2,7 @@
 $cinzaEscuro:		#242424;
 $cinza:				#434343;
 $cinzaClaro: 		#c3c3c3;
+$cinzaTexto: 		#363636;
 $vermelho:			#df3843;
 $branco:			#fff;
 $preto:				#000;
@@ -12,5 +13,5 @@ $alternateColor: 	$cinzaEscuro;
 $highlight: 		$vermelho;
 $background: 		$branco;
 $borderColor: 		$cinzaClaro;
-$textColor: 		$preto;
+$textColor: 		$cinzaTexto;
 $headingColor: 		$preto;
