Adicionado botão do menu mobile

--- a/assets/scss/sprites.scss
+++ b/assets/scss/sprites.scss
@@ -13,64 +13,75 @@ $spritesheet: width height image $spritesheet-sprites;
 */
 $facebook-name: 'facebook';
 $facebook-x: 0px;
-$facebook-y: 46px;
+$facebook-y: 85px;
 $facebook-offset-x: 0px;
-$facebook-offset-y: -46px;
+$facebook-offset-y: -85px;
 $facebook-width: 24px;
 $facebook-height: 47px;
 $facebook-total-width: 88px;
-$facebook-total-height: 314px;
+$facebook-total-height: 353px;
 $facebook-image: '../images/spritesheet.png';
-$facebook: (0px, 46px, 0px, -46px, 24px, 47px, 88px, 314px, '../images/spritesheet.png', 'facebook', );
+$facebook: (0px, 85px, 0px, -85px, 24px, 47px, 88px, 353px, '../images/spritesheet.png', 'facebook', );
 $icone-name: 'icone';
 $icone-x: 0px;
-$icone-y: 0px;
+$icone-y: 39px;
 $icone-offset-x: 0px;
-$icone-offset-y: 0px;
+$icone-offset-y: -39px;
 $icone-width: 47px;
 $icone-height: 36px;
 $icone-total-width: 88px;
-$icone-total-height: 314px;
+$icone-total-height: 353px;
 $icone-image: '../images/spritesheet.png';
-$icone: (0px, 0px, 0px, 0px, 47px, 36px, 88px, 314px, '../images/spritesheet.png', 'icone', );
+$icone: (0px, 39px, 0px, -39px, 47px, 36px, 88px, 353px, '../images/spritesheet.png', 'icone', );
 $insta-name: 'insta';
 $insta-x: 0px;
-$insta-y: 165px;
+$insta-y: 204px;
 $insta-offset-x: 0px;
-$insta-offset-y: -165px;
+$insta-offset-y: -204px;
 $insta-width: 53px;
 $insta-height: 53px;
 $insta-total-width: 88px;
-$insta-total-height: 314px;
+$insta-total-height: 353px;
 $insta-image: '../images/spritesheet.png';
-$insta: (0px, 165px, 0px, -165px, 53px, 53px, 88px, 314px, '../images/spritesheet.png', 'insta', );
+$insta: (0px, 204px, 0px, -204px, 53px, 53px, 88px, 353px, '../images/spritesheet.png', 'insta', );
 $lettering-name: 'lettering';
 $lettering-x: 0px;
-$lettering-y: 228px;
+$lettering-y: 267px;
 $lettering-offset-x: 0px;
-$lettering-offset-y: -228px;
+$lettering-offset-y: -267px;
 $lettering-width: 88px;
 $lettering-height: 86px;
 $lettering-total-width: 88px;
-$lettering-total-height: 314px;
+$lettering-total-height: 353px;
 $lettering-image: '../images/spritesheet.png';
-$lettering: (0px, 228px, 0px, -228px, 88px, 86px, 88px, 314px, '../images/spritesheet.png', 'lettering', );
+$lettering: (0px, 267px, 0px, -267px, 88px, 86px, 88px, 353px, '../images/spritesheet.png', 'lettering', );
 $maca-name: 'maca';
 $maca-x: 0px;
-$maca-y: 103px;
+$maca-y: 142px;
 $maca-offset-x: 0px;
-$maca-offset-y: -103px;
+$maca-offset-y: -142px;
 $maca-width: 65px;
 $maca-height: 52px;
 $maca-total-width: 88px;
-$maca-total-height: 314px;
+$maca-total-height: 353px;
 $maca-image: '../images/spritesheet.png';
-$maca: (0px, 103px, 0px, -103px, 65px, 52px, 88px, 314px, '../images/spritesheet.png', 'maca', );
+$maca: (0px, 142px, 0px, -142px, 65px, 52px, 88px, 353px, '../images/spritesheet.png', 'maca', );
+$menu-name: 'menu';
+$menu-x: 0px;
+$menu-y: 0px;
+$menu-offset-x: 0px;
+$menu-offset-y: 0px;
+$menu-width: 39px;
+$menu-height: 29px;
+$menu-total-width: 88px;
+$menu-total-height: 353px;
+$menu-image: '../images/spritesheet.png';
+$menu: (0px, 0px, 0px, 0px, 39px, 29px, 88px, 353px, '../images/spritesheet.png', 'menu', );
 $spritesheet-width: 88px;
-$spritesheet-height: 314px;
+$spritesheet-height: 353px;
 $spritesheet-image: '../images/spritesheet.png';
-$spritesheet-sprites: ($facebook, $icone, $insta, $lettering, $maca, );
-$spritesheet: (88px, 314px, '../images/spritesheet.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($facebook, $icone, $insta, $lettering, $maca, $menu, );
+$spritesheet: (88px, 353px, '../images/spritesheet.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
