Estilo para formulário de reservas

--- a/assets/scss/core/_colors.scss
+++ b/assets/scss/core/_colors.scss
@@ -4,6 +4,7 @@ $cinza:				#434343;
 $cinzaClaro: 		#c3c3c3;
 $cinzaTexto: 		#363636;
 $vermelho:			#df3843;
+$gelo: 				#f5f5f5;
 $branco:			#fff;
 $preto:				#000;
 
