--- a/assets/scss/sprites.scss
+++ b/assets/scss/sprites.scss
@@ -13,75 +13,108 @@ $spritesheet: width height image $spritesheet-sprites;
 */
 $facebook-name: 'facebook';
 $facebook-x: 0px;
-$facebook-y: 85px;
+$facebook-y: 140px;
 $facebook-offset-x: 0px;
-$facebook-offset-y: -85px;
+$facebook-offset-y: -140px;
 $facebook-width: 24px;
 $facebook-height: 47px;
 $facebook-total-width: 88px;
-$facebook-total-height: 353px;
+$facebook-total-height: 408px;
 $facebook-image: '../images/spritesheet.png';
-$facebook: (0px, 85px, 0px, -85px, 24px, 47px, 88px, 353px, '../images/spritesheet.png', 'facebook', );
+$facebook: (0px, 140px, 0px, -140px, 24px, 47px, 88px, 408px, '../images/spritesheet.png', 'facebook', );
 $icone-name: 'icone';
 $icone-x: 0px;
-$icone-y: 39px;
+$icone-y: 94px;
 $icone-offset-x: 0px;
-$icone-offset-y: -39px;
+$icone-offset-y: -94px;
 $icone-width: 47px;
 $icone-height: 36px;
 $icone-total-width: 88px;
-$icone-total-height: 353px;
+$icone-total-height: 408px;
 $icone-image: '../images/spritesheet.png';
-$icone: (0px, 39px, 0px, -39px, 47px, 36px, 88px, 353px, '../images/spritesheet.png', 'icone', );
+$icone: (0px, 94px, 0px, -94px, 47px, 36px, 88px, 408px, '../images/spritesheet.png', 'icone', );
 $insta-name: 'insta';
 $insta-x: 0px;
-$insta-y: 204px;
+$insta-y: 259px;
 $insta-offset-x: 0px;
-$insta-offset-y: -204px;
+$insta-offset-y: -259px;
 $insta-width: 53px;
 $insta-height: 53px;
 $insta-total-width: 88px;
-$insta-total-height: 353px;
+$insta-total-height: 408px;
 $insta-image: '../images/spritesheet.png';
-$insta: (0px, 204px, 0px, -204px, 53px, 53px, 88px, 353px, '../images/spritesheet.png', 'insta', );
+$insta: (0px, 259px, 0px, -259px, 53px, 53px, 88px, 408px, '../images/spritesheet.png', 'insta', );
 $lettering-name: 'lettering';
 $lettering-x: 0px;
-$lettering-y: 267px;
+$lettering-y: 322px;
 $lettering-offset-x: 0px;
-$lettering-offset-y: -267px;
+$lettering-offset-y: -322px;
 $lettering-width: 88px;
 $lettering-height: 86px;
 $lettering-total-width: 88px;
-$lettering-total-height: 353px;
+$lettering-total-height: 408px;
 $lettering-image: '../images/spritesheet.png';
-$lettering: (0px, 267px, 0px, -267px, 88px, 86px, 88px, 353px, '../images/spritesheet.png', 'lettering', );
+$lettering: (0px, 322px, 0px, -322px, 88px, 86px, 88px, 408px, '../images/spritesheet.png', 'lettering', );
 $maca-name: 'maca';
 $maca-x: 0px;
-$maca-y: 142px;
+$maca-y: 197px;
 $maca-offset-x: 0px;
-$maca-offset-y: -142px;
+$maca-offset-y: -197px;
 $maca-width: 65px;
 $maca-height: 52px;
 $maca-total-width: 88px;
-$maca-total-height: 353px;
+$maca-total-height: 408px;
 $maca-image: '../images/spritesheet.png';
-$maca: (0px, 142px, 0px, -142px, 65px, 52px, 88px, 353px, '../images/spritesheet.png', 'maca', );
+$maca: (0px, 197px, 0px, -197px, 65px, 52px, 88px, 408px, '../images/spritesheet.png', 'maca', );
+$mais-name: 'mais';
+$mais-x: 0px;
+$mais-y: 29px;
+$mais-offset-x: 0px;
+$mais-offset-y: -29px;
+$mais-width: 17px;
+$mais-height: 16px;
+$mais-total-width: 88px;
+$mais-total-height: 408px;
+$mais-image: '../images/spritesheet.png';
+$mais: (0px, 29px, 0px, -29px, 17px, 16px, 88px, 408px, '../images/spritesheet.png', 'mais', );
+$menos-name: 'menos';
+$menos-x: 0px;
+$menos-y: 0px;
+$menos-offset-x: 0px;
+$menos-offset-y: 0px;
+$menos-width: 18px;
+$menos-height: 1px;
+$menos-total-width: 88px;
+$menos-total-height: 408px;
+$menos-image: '../images/spritesheet.png';
+$menos: (0px, 0px, 0px, 0px, 18px, 1px, 88px, 408px, '../images/spritesheet.png', 'menos', );
 $menu-name: 'menu';
 $menu-x: 0px;
-$menu-y: 0px;
+$menu-y: 55px;
 $menu-offset-x: 0px;
-$menu-offset-y: 0px;
+$menu-offset-y: -55px;
 $menu-width: 39px;
 $menu-height: 29px;
 $menu-total-width: 88px;
-$menu-total-height: 353px;
+$menu-total-height: 408px;
 $menu-image: '../images/spritesheet.png';
-$menu: (0px, 0px, 0px, 0px, 39px, 29px, 88px, 353px, '../images/spritesheet.png', 'menu', );
+$menu: (0px, 55px, 0px, -55px, 39px, 29px, 88px, 408px, '../images/spritesheet.png', 'menu', );
+$seta-abaixo-name: 'seta-abaixo';
+$seta-abaixo-x: 0px;
+$seta-abaixo-y: 11px;
+$seta-abaixo-offset-x: 0px;
+$seta-abaixo-offset-y: -11px;
+$seta-abaixo-width: 15px;
+$seta-abaixo-height: 8px;
+$seta-abaixo-total-width: 88px;
+$seta-abaixo-total-height: 408px;
+$seta-abaixo-image: '../images/spritesheet.png';
+$seta-abaixo: (0px, 11px, 0px, -11px, 15px, 8px, 88px, 408px, '../images/spritesheet.png', 'seta-abaixo', );
 $spritesheet-width: 88px;
-$spritesheet-height: 353px;
+$spritesheet-height: 408px;
 $spritesheet-image: '../images/spritesheet.png';
-$spritesheet-sprites: ($facebook, $icone, $insta, $lettering, $maca, $menu, );
-$spritesheet: (88px, 353px, '../images/spritesheet.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($facebook, $icone, $insta, $lettering, $maca, $mais, $menos, $menu, $seta-abaixo, );
+$spritesheet: (88px, 408px, '../images/spritesheet.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
