--- a/assets/scss/modules/booking.scss
+++ b/assets/scss/modules/booking.scss
@@ -24,3 +24,119 @@
 		z-index: 10;
 	}
 }
+
+#reserva-container{
+	position: absolute;
+	bottom: 50px;
+	left: 0;
+	width: 100%;
+	z-index: 10;
+}
+#reserva{
+	@include clearfix;
+	background: $branco;
+	width: 100%;
+
+	.campo-reserva, button{
+		box-sizing: border-box;
+		float: left;
+		height: 106px;
+		position: relative;
+	}
+	.campo-reserva{
+		padding: 15px 2.34% 0;
+
+		&+.campo-reserva{
+			border-left: 1px solid $gelo;
+		}
+
+		label{
+			display: block;
+			font-size: 10px;
+			margin: 0 auto 10px;
+			text-transform: uppercase;
+			text-align: center;
+		}
+		input{
+			display: none;
+		}
+	}
+	.calendario{
+		width: 12.75%;
+	}
+	.quantidade{
+		width: 18%;
+	}
+	.valor{
+		border: 0;
+		color: $alternateColor;
+		display: block;
+		font: $light 40px $headingFont;
+		margin: auto;
+		text-align: center;
+		width: 70%;
+		height: 42px;
+	}
+	.abre-calendario, .menos, .mais{
+		cursor: pointer;
+		display: block;
+		position: absolute;
+		width: 20px;
+		height: 20px;
+
+		&::before{
+			@include absoluteAlign(50%, 50%);
+			content: '';
+			display: block;
+		}
+	}
+	.abre-calendario{
+		left: calc(50% - 10px);
+		bottom: 5px;
+
+		&::before{
+			@include sprite($seta-abaixo);
+		}
+	}
+	.menos{
+		bottom: 37px;
+		left: 13%;
+
+		&::before{
+			@include sprite($menos);
+		}
+	}
+	.mais{
+		bottom: 37px;
+		right: 13%;
+
+		&::before{
+			@include sprite($mais);
+		}
+	}
+	.promocode{
+		width: 16.7%;
+
+		input{
+			border: 1px solid $alternateColor;
+			display: block;
+			font-size: 16px;
+			margin-top: 20px;
+			text-transform: uppercase;
+			width: 100%;
+			height: 34px;
+		}
+	}
+	button{
+		@include animacao;
+		background: $alternateColor;
+		color: $branco;
+		font: $light 27px $headingFont;
+		text-transform: uppercase;
+		width: 21.8%;
+
+		&:hover{
+			background: #474747;
+		}
+	}
+}
