--- a/assets/scss/modules/booking.scss
+++ b/assets/scss/modules/booking.scss
@@ -1,21 +1,21 @@
 #booking{
-	background: url(../images/bg.jpg) no-repeat center;
+	background: url(../images/bg2.jpg) no-repeat top;
 	background-size: cover;
 	position: relative;
 	width: 100%;
 	height: 100vh;
 
-	&::before{
-		background: rgba($preto, .55);
-		content: '';
-		display: block;
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 1;
-	}
+	// &::before{
+	// 	background: rgba($preto, .55);
+	// 	content: '';
+	// 	display: block;
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 0;
+	// 	width: 100%;
+	// 	height: 100%;
+	// 	z-index: 1;
+	// }
 
 	h1{
 		@include absoluteAlign(50%, 50%);
