--- a/assets/scss/modules/booking.scss
+++ b/assets/scss/modules/booking.scss
@@ -1,6 +1,7 @@
 #booking{
 	background: url(../images/bg2.jpg) no-repeat top;
 	background-size: cover;
+	overflow: hidden;
 	position: relative;
 	width: 100%;
 	height: 100vh;
