--- a/assets/scss/sprites.scss
+++ b/assets/scss/sprites.scss
@@ -13,70 +13,70 @@ $spritesheet: width height image $spritesheet-sprites;
 */
 $facebook-name: 'facebook';
 $facebook-x: 0px;
-$facebook-y: 140px;
+$facebook-y: 180px;
 $facebook-offset-x: 0px;
-$facebook-offset-y: -140px;
+$facebook-offset-y: -180px;
 $facebook-width: 24px;
 $facebook-height: 47px;
 $facebook-total-width: 88px;
-$facebook-total-height: 408px;
+$facebook-total-height: 448px;
 $facebook-image: '../images/spritesheet.png';
-$facebook: (0px, 140px, 0px, -140px, 24px, 47px, 88px, 408px, '../images/spritesheet.png', 'facebook', );
+$facebook: (0px, 180px, 0px, -180px, 24px, 47px, 88px, 448px, '../images/spritesheet.png', 'facebook', );
 $icone-name: 'icone';
 $icone-x: 0px;
-$icone-y: 94px;
+$icone-y: 134px;
 $icone-offset-x: 0px;
-$icone-offset-y: -94px;
+$icone-offset-y: -134px;
 $icone-width: 47px;
 $icone-height: 36px;
 $icone-total-width: 88px;
-$icone-total-height: 408px;
+$icone-total-height: 448px;
 $icone-image: '../images/spritesheet.png';
-$icone: (0px, 94px, 0px, -94px, 47px, 36px, 88px, 408px, '../images/spritesheet.png', 'icone', );
+$icone: (0px, 134px, 0px, -134px, 47px, 36px, 88px, 448px, '../images/spritesheet.png', 'icone', );
 $insta-name: 'insta';
 $insta-x: 0px;
-$insta-y: 259px;
+$insta-y: 299px;
 $insta-offset-x: 0px;
-$insta-offset-y: -259px;
+$insta-offset-y: -299px;
 $insta-width: 53px;
 $insta-height: 53px;
 $insta-total-width: 88px;
-$insta-total-height: 408px;
+$insta-total-height: 448px;
 $insta-image: '../images/spritesheet.png';
-$insta: (0px, 259px, 0px, -259px, 53px, 53px, 88px, 408px, '../images/spritesheet.png', 'insta', );
+$insta: (0px, 299px, 0px, -299px, 53px, 53px, 88px, 448px, '../images/spritesheet.png', 'insta', );
 $lettering-name: 'lettering';
 $lettering-x: 0px;
-$lettering-y: 322px;
+$lettering-y: 362px;
 $lettering-offset-x: 0px;
-$lettering-offset-y: -322px;
+$lettering-offset-y: -362px;
 $lettering-width: 88px;
 $lettering-height: 86px;
 $lettering-total-width: 88px;
-$lettering-total-height: 408px;
+$lettering-total-height: 448px;
 $lettering-image: '../images/spritesheet.png';
-$lettering: (0px, 322px, 0px, -322px, 88px, 86px, 88px, 408px, '../images/spritesheet.png', 'lettering', );
+$lettering: (0px, 362px, 0px, -362px, 88px, 86px, 88px, 448px, '../images/spritesheet.png', 'lettering', );
 $maca-name: 'maca';
 $maca-x: 0px;
-$maca-y: 197px;
+$maca-y: 237px;
 $maca-offset-x: 0px;
-$maca-offset-y: -197px;
+$maca-offset-y: -237px;
 $maca-width: 65px;
 $maca-height: 52px;
 $maca-total-width: 88px;
-$maca-total-height: 408px;
+$maca-total-height: 448px;
 $maca-image: '../images/spritesheet.png';
-$maca: (0px, 197px, 0px, -197px, 65px, 52px, 88px, 408px, '../images/spritesheet.png', 'maca', );
+$maca: (0px, 237px, 0px, -237px, 65px, 52px, 88px, 448px, '../images/spritesheet.png', 'maca', );
 $mais-name: 'mais';
 $mais-x: 0px;
-$mais-y: 29px;
+$mais-y: 69px;
 $mais-offset-x: 0px;
-$mais-offset-y: -29px;
+$mais-offset-y: -69px;
 $mais-width: 17px;
 $mais-height: 16px;
 $mais-total-width: 88px;
-$mais-total-height: 408px;
+$mais-total-height: 448px;
 $mais-image: '../images/spritesheet.png';
-$mais: (0px, 29px, 0px, -29px, 17px, 16px, 88px, 408px, '../images/spritesheet.png', 'mais', );
+$mais: (0px, 69px, 0px, -69px, 17px, 16px, 88px, 448px, '../images/spritesheet.png', 'mais', );
 $menos-name: 'menos';
 $menos-x: 0px;
 $menos-y: 0px;
@@ -85,20 +85,20 @@ $menos-offset-y: 0px;
 $menos-width: 18px;
 $menos-height: 1px;
 $menos-total-width: 88px;
-$menos-total-height: 408px;
+$menos-total-height: 448px;
 $menos-image: '../images/spritesheet.png';
-$menos: (0px, 0px, 0px, 0px, 18px, 1px, 88px, 408px, '../images/spritesheet.png', 'menos', );
+$menos: (0px, 0px, 0px, 0px, 18px, 1px, 88px, 448px, '../images/spritesheet.png', 'menos', );
 $menu-name: 'menu';
 $menu-x: 0px;
-$menu-y: 55px;
+$menu-y: 95px;
 $menu-offset-x: 0px;
-$menu-offset-y: -55px;
+$menu-offset-y: -95px;
 $menu-width: 39px;
 $menu-height: 29px;
 $menu-total-width: 88px;
-$menu-total-height: 408px;
+$menu-total-height: 448px;
 $menu-image: '../images/spritesheet.png';
-$menu: (0px, 55px, 0px, -55px, 39px, 29px, 88px, 408px, '../images/spritesheet.png', 'menu', );
+$menu: (0px, 95px, 0px, -95px, 39px, 29px, 88px, 448px, '../images/spritesheet.png', 'menu', );
 $seta-abaixo-name: 'seta-abaixo';
 $seta-abaixo-x: 0px;
 $seta-abaixo-y: 11px;
@@ -107,14 +107,36 @@ $seta-abaixo-offset-y: -11px;
 $seta-abaixo-width: 15px;
 $seta-abaixo-height: 8px;
 $seta-abaixo-total-width: 88px;
-$seta-abaixo-total-height: 408px;
+$seta-abaixo-total-height: 448px;
 $seta-abaixo-image: '../images/spritesheet.png';
-$seta-abaixo: (0px, 11px, 0px, -11px, 15px, 8px, 88px, 408px, '../images/spritesheet.png', 'seta-abaixo', );
+$seta-abaixo: (0px, 11px, 0px, -11px, 15px, 8px, 88px, 448px, '../images/spritesheet.png', 'seta-abaixo', );
+$seta-direita-name: 'seta-direita';
+$seta-direita-x: 0px;
+$seta-direita-y: 49px;
+$seta-direita-offset-x: 0px;
+$seta-direita-offset-y: -49px;
+$seta-direita-width: 7px;
+$seta-direita-height: 10px;
+$seta-direita-total-width: 88px;
+$seta-direita-total-height: 448px;
+$seta-direita-image: '../images/spritesheet.png';
+$seta-direita: (0px, 49px, 0px, -49px, 7px, 10px, 88px, 448px, '../images/spritesheet.png', 'seta-direita', );
+$seta-esquerda-name: 'seta-esquerda';
+$seta-esquerda-x: 0px;
+$seta-esquerda-y: 29px;
+$seta-esquerda-offset-x: 0px;
+$seta-esquerda-offset-y: -29px;
+$seta-esquerda-width: 7px;
+$seta-esquerda-height: 10px;
+$seta-esquerda-total-width: 88px;
+$seta-esquerda-total-height: 448px;
+$seta-esquerda-image: '../images/spritesheet.png';
+$seta-esquerda: (0px, 29px, 0px, -29px, 7px, 10px, 88px, 448px, '../images/spritesheet.png', 'seta-esquerda', );
 $spritesheet-width: 88px;
-$spritesheet-height: 408px;
+$spritesheet-height: 448px;
 $spritesheet-image: '../images/spritesheet.png';
-$spritesheet-sprites: ($facebook, $icone, $insta, $lettering, $maca, $mais, $menos, $menu, $seta-abaixo, );
-$spritesheet: (88px, 408px, '../images/spritesheet.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($facebook, $icone, $insta, $lettering, $maca, $mais, $menos, $menu, $seta-abaixo, $seta-direita, $seta-esquerda, );
+$spritesheet: (88px, 448px, '../images/spritesheet.png', $spritesheet-sprites, );
 
 /*
 The provided mixins are intended to be used with the array-like variables
