Menu hamburger responsivo.

--- a/assets/scss/responsive/640.scss
+++ b/assets/scss/responsive/640.scss
@@ -1,10 +1,6 @@
 #header{
-	position: absolute;
-	
-	.logo-simples{
-		display: block;
-		margin: 40px auto 0;
-		text-align: center;
+	nav .global li{
+		margin: 30px auto !important;
 	}
 }
 
